    * 0313 FIX: Avoid duplicate reading of configuration file on --create-rrd...
    * 0379 FIX: check_mk -c: Now also rewrites the location of conf.d directory
    * 0354 FIX: Catch exception when check plugins do not return a state...
    * 0398 FIX: Tolerate debug output in check plugins when using CMC...

    Checks & Agents:
    * 0306 esx_vsphere_counters: added missing ramdisk levels sfcbtickets
    * 0073 moxa_iologik_register: new check to monitor moxa e2000 series registers
    * 0105 apc_humidity: New Check for humidity levels on APC Devices
    * 0106 3ware_units: The verifying state is now handled as ok...
    * 0086 timemachine: new check checking the age of latest backup by timemachine on MAC OS
    * 0074 raritan_pdu_plugs: new check for Raritan PX-2000 family PDUs...
    * 0107 stulz_alerts, stulz_powerstate, stulz_temp, stulz_humidity: New Checks for Stulz clima devices
    * 0075 raritan_pdu_inlet: new check to monitor inlet sensors of the Raritan PX-2000 PDUs
    * 0315 hitachi_hnas_quorumdevice, hitachi_hnas_pnode, hitachi_hnas_vnode: New checks for Hitachi HNAS devices
    * 0316 hitachi_hnas_cpu: New check for CPU utilization of Hitachi HNAS devices
    * 0373 wut_webtherm: Supporting several other devices now
    * 0377 check_http: Certificate Age mode now supports SNI...
    * 0317 emc_isilon: New checks for EMC Isilon Storage System
    * 0395 cmctc.temp: also detect older CMC devices
    * 0396 cmciii_access cmciii_io cmciii_psm_current cmciii_psm_plugs: Support other firmeware versions as well...
    * 0111 kemp_loadmaster_ha, kemp_loadmaster_realserver, kemp_loadmaster_services: New Checks for Kemp Loadbalancer
    * 0318 hitachi_hnas_fan: New check for fans in Hitachi HNAS systems
    * 0319 hitachi_hnas_psu, hitachi_hnas_psu: New checks for Hitachi HNAS storage systems
    * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
    * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now