@@ -6,6 +6,7 @@
     * 0379 FIX: check_mk -c: Now also rewrites the location of conf.d directory
     * 0354 FIX: Catch exception when check plugins do not return a state...
     * 0398 FIX: Tolerate debug output in check plugins when using CMC...
+    * 0314 FIX: Fix CMC not executing any Check_MK checks after config reload...
 
     Checks & Agents:
     * 0306 esx_vsphere_counters: added missing ramdisk levels sfcbtickets
